# pico2-forth

./: .gitignore  CMakeLists.txt  README.md  build.sh  chip22-words.txt  intro_prompt.txt
pico-examples2/: CMakeLists.txt  README.md  build.sh  hello-usb.sh  intro_prompt.txt  testing.sh
pico-examples2/hello_world/usb/: hello_usb.c
pico-examples2/src/: forth_core.c  pico_main.c
pico-examples2/tests/: test_forth.py
src/: forth_core.c  forth_core.h  forth_host.c  pico_main.c
tests/: test_forth.py
